# trigraphx

./: .gitignore  Cargo.toml  IMPLEMENTATION_LOG.md  README.md  README_UI.md  RENAME_SUMMARY.md  TriGraphX_DATABASE_MODEL.md  TriGraphX_QUICK_START.md  UI_ARCHITECTURE.md  examples.py  pyproject.toml  requirements.txt  run_ui.sh  setup.py  test_vector.py  test_vector_simple.py  trigraphx_network.html  ui_streamlit.py
src/: config.rs  entity.rs  error.rs  lib.rs  persistence.rs  space.rs
tests/: test_benchmark.py  test_comprehensive.py  test_core.py
trigraphx/: __init__.py  config.py  entity.py  persistence.py  space.py
trigraphx_core/: __init__.py  enterprise.py  entity.py  space.py
trigraphx_rust/: Cargo.toml
trigraphx_rust/src/: lib.rs  lsh.rs  metrics.rs  quantize.rs
