[package]
name = "trigraphx"
version = "0.2.0"
edition = "2021"
description = "TriGraphX - Unified Metric Space Database combining tree, graph, and vector storage"
license = "MIT"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
sha2 = "0.10"
hex = "0.4"
rusqlite = { version = "0.31", features = ["bundled"] }
tar = "0.4"
flate2 = "1.0"
log = "0.4"
thiserror = "1.0"
rayon = "1.7"
ndarray = "0.15"
